--- a/.github/workflows/build-wordpress.yml
+++ b/.github/workflows/build-wordpress.yml
@@ -104,7 +104,7 @@ jobs:
         with:
           payload: |
             {
-              "text": "*${{ needs.build.result == 'success' && '✅ Build Success for ' || '❌ Build Failed for ' }}${{ inputs.environment }} environment*\n\n*🌍 Environment Details:*\n• 🎯 Environment: *${{ inputs.environment }}*\n• 📦 Repository: *${{ github.repository }}*\n• 🌿 Branch: *${{ github.ref_name }}*\n\n*💬 Commit Information:*\n• 📝 Message: ${{ env.clean_commit_message }}\n• 👤 Author: ${{ github.event.head_commit.author.name }}\n• 📅 Date: $(date '+%Y-%m-%d %H:%M:%S')\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 View Workflow Run>"
+              "text": "*${{ needs.build.result == 'success' && '✅ Build Success for ' || '❌ Build Failed for ' }}${{ inputs.environment }} environment*\n\n*Environment Details:*\n• Environment: *${{ inputs.environment }}*\n• Repository: *${{ github.repository }}*\n• Branch: *${{ github.ref_name }}*\n\n*Commit Information:*\n• Message: ${{ env.clean_commit_message }}\n• Author: ${{ github.event.head_commit.author.name }}\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|🔍 View Workflow Run>"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
